Pagina inicial: seccion inicial e informativa realizada

--- a/index.html
+++ b/index.html
@@ -37,7 +37,55 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <section class="principal--bg">
+        <article class="principal__content">
+          <h1 class="principal__title">Hotel con hospitalidad auténtica</h1>
+        </article>
+        <a href="#" class="principal__link">RESERVAR AHORA</a>
+      </section>
+      <section class="information">
+        <article class="information__hotel">
+          <img
+            src="./media/imgs/LOGO_HOTEL 4.png"
+            alt="Logo del Hotel"
+            class="information__logo"
+          />
+          <p class="information__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae non
+            accusantium ut quod similique, a unde iusto dolorum. Voluptate
+            nesciunt odit ducimus adipisci deleniti. Itaque dignissimos quisquam
+            iste? Inventore, doloribus?
+          </p>
+          <p class="information__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae non
+            accusantium ut quod similique, a unde iusto dolorum. Voluptate
+            nesciunt odit ducimus adipisci deleniti. Itaque dignissimos quisquam
+            iste? Inventore, doloribus?
+          </p>
+        </article>
+        <hr class="hr--gold" />
+      </section>
+      <section class="information information--r">
+        <article class="information__rooms--text">
+          <h2>Nuestras Habitaciones</h2>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam
+            unde, fugit molestiae doloremque adipisci beatae! Asperiores,
+            reprehenderit. Delectus, optio, molestias quis perspiciatis
+            consequuntur inventore, ipsum ea vel similique placeat impedit!
+          </p>
+          <a href="#">Ver Habitaciones</a>
+        </article>
+        <article class="information__rooms--text">
+          <img
+            src="./media/imgs/img_habitaciones.png"
+            alt="Imagen de una Habitacion"
+            class="information__img"
+          />
+        </article>
+      </section>
+    </main>
     <footer>
       <section class="footer__content">
         <article class="flex--col">
