Seccion rooms realizada

--- a/index.html
+++ b/index.html
@@ -67,17 +67,22 @@
         <hr class="hr--gold" />
       </section>
       <section class="information information--r">
-        <article class="information__rooms--text">
-          <h2>Nuestras Habitaciones</h2>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam
-            unde, fugit molestiae doloremque adipisci beatae! Asperiores,
-            reprehenderit. Delectus, optio, molestias quis perspiciatis
-            consequuntur inventore, ipsum ea vel similique placeat impedit!
-          </p>
-          <a href="#">Ver Habitaciones</a>
-        </article>
-        <article class="information__rooms--text">
+        <article class="information--rooms">
+          <article class="information__rooms--text">
+            <h2 class="rooms__title">Nuestras Habitaciones</h2>
+            <p class="rooms__description">
+              Nuestras habitaciones de lujo garantizan una experiencia
+              gratificante, con detalles elegantes. Nuestros muebles han sido
+              cuidadosamente seleccionados para ofrecer el máximo confort,
+              combinando diseño moderno con funcionalidad. Cada rincón está
+              pensado para brindarte bienestar, ya sea que busques descanso,
+              inspiración o una estadía inolvidable.
+            </p>
+            <div class="link__room--container">
+              <div class="hr__dark"></div>
+              <a href="#" class="rooms__link">Ver Habitaciones</a>
+            </div>
+          </article>
           <img
             src="./media/imgs/img_habitaciones.png"
             alt="Imagen de una Habitacion"
