Seccion experiencias realizada

--- a/index.html
+++ b/index.html
@@ -90,6 +90,53 @@
           />
         </article>
       </section>
+      <section class="experiences">
+        <h2 class="experiences__title">Experiencias Doradas</h2>
+
+        <section class="experiences__gallery">
+          <article class="experience">
+            <figure class="experience__figure">
+              <img
+                src="./media/photos/markzuck.webp"
+                alt="Foto de Mark Zuckenberg"
+                class="experience__image"
+              />
+              <figcaption class="experience__caption">
+                Un lugar de paz y lujo, El Ensueño Dorado combina naturaleza,
+                descanso y diseño como pocos hoteles que he visitado en el
+                mundo.
+              </figcaption>
+            </figure>
+          </article>
+          <article class="experience">
+            <figure class="experience__figure">
+              <img
+                src="./media/photos/llf.webp"
+                alt="Foto del hombre más rico de colombia"
+                class="experience__image"
+              />
+              <figcaption class="experience__caption">
+                El Ensueño Dorado refleja el estándar que merece Colombia:
+                excelencia, tranquilidad y una visión clara de servicio premium.
+              </figcaption>
+            </figure>
+          </article>
+
+          <article class="experience">
+            <figure class="experience__figure">
+              <img
+                src="./media/photos/alexchar.webp"
+                alt="Foto de Alex C."
+                class="experience__image"
+              />
+              <figcaption class="experience__caption">
+                El Ensueño Dorado es sinónimo de elegancia y hospitalidad. Un
+                espacio perfecto para renovar energías y disfrutar con calma.
+              </figcaption>
+            </figure>
+          </article>
+        </section>
+      </section>
     </main>
     <footer>
       <section class="footer__content">
