Responsive pagina inicial mejorado

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </header>
     <main>
       <section class="principal--bg">
-        <article class="principal__content">
+        <article class="principal__contentprincipal__content">
           <h1 class="principal__title">Hotel con hospitalidad auténtica</h1>
         </article>
         <a href="#" class="principal__link">RESERVAR AHORA</a>
@@ -52,16 +52,17 @@
             class="information__logo"
           />
           <p class="information__text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae non
-            accusantium ut quod similique, a unde iusto dolorum. Voluptate
-            nesciunt odit ducimus adipisci deleniti. Itaque dignissimos quisquam
-            iste? Inventore, doloribus?
+            Hotel Ensueño Dorado es un elegante hotel del centro de
+            Barranquilla. Sus confortables habitaciones y servicios de alto
+            nivel hacen de cada momento un pequeño lujo, y su céntrica ubicación
+            te transportará en solo unos minutos al magnífico esplendor de la
+            época antigua.
           </p>
           <p class="information__text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae non
-            accusantium ut quod similique, a unde iusto dolorum. Voluptate
-            nesciunt odit ducimus adipisci deleniti. Itaque dignissimos quisquam
-            iste? Inventore, doloribus?
+            A todo ello añadimos una pasión auténtica por la hospitalidad, que
+            percibirás con la primera mirada. La cuidadosa atención en los
+            detalles y la luminosa sonrisa de nuestro personal no precisan
+            palabras.
           </p>
         </article>
         <hr class="hr--gold" />
