Seccion propuestas realizada

--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
             palabras.
           </p>
         </article>
-        <hr class="hr--gold" />
       </section>
       <section class="information information--r">
         <article class="information--rooms">
@@ -137,6 +136,49 @@
             </figure>
           </article>
         </section>
+      </section>
+      <section class="propuestas" aria-label="Propuestas para tu estancia">
+        <h2 class="propuestas__titulo">Propuestas para tu estancia</h2>
+
+        <div class="propuestas__contenedor">
+          <article class="propuesta">
+            <figure class="propuesta__imagen">
+              <img
+                src="./media/photos/romanticismo.png"
+                alt="Pareja disfrutando una experiencia romántica"
+              />
+            </figure>
+            <h3 class="propuesta__titulo">Romanticismo</h3>
+            <p class="propuesta__descripcion">Mágica escapada de pareja</p>
+            <button class="propuesta__boton">Saber Más</button>
+          </article>
+
+          <article class="propuesta">
+            <figure class="propuesta__imagen">
+              <img
+                src="./media/photos/regalate.png"
+                alt="Suite con terraza y flores"
+              />
+            </figure>
+            <h3 class="propuesta__titulo">Regálate una suite</h3>
+            <p class="propuesta__descripcion">Increíble estancia en suite</p>
+            <button class="propuesta__boton">Saber Más</button>
+          </article>
+
+          <article class="propuesta">
+            <figure class="propuesta__imagen">
+              <img
+                src="./media/photos/reservaydescuento.png"
+                alt="Pareja hablando con el personal del hotel"
+              />
+            </figure>
+            <h3 class="propuesta__titulo">Reserva más noches y ahorra</h3>
+            <p class="propuesta__descripcion">
+              Alójate por lo menos 3 días en el hotel
+            </p>
+            <button class="propuesta__boton">Saber Más</button>
+          </article>
+        </div>
       </section>
     </main>
     <footer>
