Seccion servicios estructurada

--- a/index.html
+++ b/index.html
@@ -180,6 +180,67 @@
           </article>
         </div>
       </section>
+      <section class="services" aria-label="Servicios del hotel">
+        <h2 class="services__title">Servicios</h2>
+
+        <div class="services__container">
+          <article class="service">
+            <span class="service__icon" aria-hidden="true">🛏️</span>
+            <h3 class="service__title">Habitaciones</h3>
+            <p class="service__description">
+              Descansa en cualquiera de nuestras 206 habitaciones cuidadosamente
+              diseñadas —Clásica, Ejecutiva o Cabaña— pensadas para ofrecerte
+              una estancia inigualable.
+            </p>
+            <button class="service__button" aria-label="Más sobre habitaciones">
+              →
+            </button>
+          </article>
+
+          <article class="service">
+            <span class="service__icon" aria-hidden="true">📢</span>
+            <h3 class="service__title">Planes y Ofertas</h3>
+            <p class="service__description">
+              Descubre paquetes exclusivos y ofertas a tu medida, ideales para
+              cada ocasión. Diseñados para sorprenderte y adaptarse a tus
+              planes.
+            </p>
+            <button
+              class="service__button"
+              aria-label="Más sobre planes y ofertas"
+            >
+              →
+            </button>
+          </article>
+
+          <article class="service">
+            <span class="service__icon" aria-hidden="true">🎉</span>
+            <h3 class="service__title">Eventos</h3>
+            <p class="service__description">
+              Convierte tus eventos en experiencias memorables. Te acompañamos
+              en cada detalle para lograr celebraciones inolvidables.
+            </p>
+            <button class="service__button" aria-label="Más sobre eventos">
+              →
+            </button>
+          </article>
+
+          <article class="service">
+            <span class="service__icon" aria-hidden="true">🍽️</span>
+            <h3 class="service__title">Restaurantes y Bares</h3>
+            <p class="service__description">
+              Degusta lo mejor de la cocina local e internacional en espacios
+              únicos que combinan elegancia, tradición y sabor.
+            </p>
+            <button
+              class="service__button"
+              aria-label="Más sobre restaurantes y bares"
+            >
+              →
+            </button>
+          </article>
+        </div>
+      </section>
     </main>
     <footer>
       <section class="footer__content">
