Black curtain añadida al header

--- a/index.html
+++ b/index.html
@@ -35,11 +35,16 @@
           <li><a href="#" class="nav__link">Salas</a></li>
           <hr />
         </ul>
+
+        <article class="menu--mobile">
+          <img src="./media/icons/menu.svg" class="nav__menu--icon" alt="" id="iconMenuMobile">
+        </article>
       </nav>
     </header>
+    <div class="black-curtain" id="menuOverlay"></div>
     <main>
       <section class="principal--bg">
-        <article class="principal__contentprincipal__content">
+        <article class="principal__content principal__content">
           <h1 class="principal__title">Hotel con hospitalidad auténtica</h1>
         </article>
         <a href="#" class="principal__link">RESERVAR AHORA</a>
