--- a/index.html
+++ b/index.html
@@ -246,6 +246,15 @@
           </article>
         </div>
       </section>
+      <section class="mapa">
+        <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3916.465115341576!2d-74.81913802555425!3d11.003687554961942!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8ef42da8620cf8b3%3A0x76177cd1deff17c6!2sHotel%20Dorado%20Plaza%20Alto%20Prado!5e0!3m2!1ses!2sco!4v1750174279709!5m2!1ses!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+
+        <article class="mapa__llegar">
+          <h2>¿Cómo llegar?</h2>
+        </article>
+
+        <iframe src="https://www.google.com/maps/embed?pb=!4v1750174829239!6m8!1m7!1sCAoSF0NJSE0wb2dLRUlDQWdJQ3FyWi1oekFF!2m2!1d11.00368226980713!2d-74.8165630798946!3f325.7020086398377!4f-3.1603339298822135!5f0.7820865974627469" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </section>
     </main>
     <footer>
       <section class="footer__content">
