Errores de escritura corregidos

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           />
 
           <ul class="list__down list__down--left display-none">
-            <h2 class="list__title">Escensiales</h2>
+            <h2 class="list__title">Esenciales</h2>
             <li><a href="#" class="nav__link link__down">Inicio</a></li>
             <li><a href="#" class="nav__link link__down">Historia</a></li>
             <li><a href="#" class="nav__link link__down">Habitaciones</a></li>
