Pagina habitaciones estructurada

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul class="nav__lista">
           <li><a href="#" class="nav__link">Inicio</a></li>
           <li><a href="#" class="nav__link">Historia</a></li>
-          <li><a href="#" class="nav__link">Habitaciones</a></li>
+          <li><a href="./pages/habitaciones.html" class="nav__link">Habitaciones</a></li>
           <li><a href="#" class="nav__link" id="lugares">Lugares</a></li>
         </ul>
 
@@ -48,7 +48,7 @@
             <h2 class="list__title">Esenciales</h2>
             <li><a href="#" class="nav__link link__down">Inicio</a></li>
             <li><a href="#" class="nav__link link__down">Historia</a></li>
-            <li><a href="#" class="nav__link link__down">Habitaciones</a></li>
+            <li><a href="./pages/habitaciones.html" class="nav__link link__down">Habitaciones</a></li>
           </ul>
 
           <ul class="list__down list__down--right display-none">
