Pagina salas integrada

--- a/index.html
+++ b/index.html
@@ -13,16 +13,22 @@
   </head>
   <body>
     <header>
-      <img
-        src="./media/imgs/LOGO_HOTEL 4.png"
-        class="header__logo"
-        alt="Logo del Ensueño Dorado"
-      />
+      <a href="index.html" class="header__logo-link">
+        <img
+          src="../media/imgs/LOGO_HOTEL 4.png"
+          class="header__logo"
+          alt="Logo del Ensueño Dorado"
+        />
+      </a>
       <nav class="header__nav">
         <ul class="nav__lista">
           <li><a href="#" class="nav__link">Inicio</a></li>
           <li><a href="#" class="nav__link">Historia</a></li>
-          <li><a href="./pages/habitaciones.html" class="nav__link">Habitaciones</a></li>
+          <li>
+            <a href="./pages/habitaciones.html" class="nav__link"
+              >Habitaciones</a
+            >
+          </li>
           <li><a href="#" class="nav__link" id="lugares">Lugares</a></li>
         </ul>
 
@@ -32,7 +38,7 @@
           <hr />
           <li><a href="#" class="nav__link">Eventos</a></li>
           <hr />
-          <li><a href="#" class="nav__link">Salas</a></li>
+          <li><a href="./pages/salas.html" class="nav__link">Salas</a></li>
           <hr />
         </ul>
 
@@ -48,12 +54,20 @@
             <h2 class="list__title">Esenciales</h2>
             <li><a href="#" class="nav__link link__down">Inicio</a></li>
             <li><a href="#" class="nav__link link__down">Historia</a></li>
-            <li><a href="./pages/habitaciones.html" class="nav__link link__down">Habitaciones</a></li>
+            <li>
+              <a href="./pages/habitaciones.html" class="nav__link link__down"
+                >Habitaciones</a
+              >
+            </li>
           </ul>
 
           <ul class="list__down list__down--right display-none">
             <h2 class="list__title">Lugares</h2>
-            <li><a href="#" class="nav__link link__down">Salas</a></li>
+            <li>
+              <a href="./pages/salas.html" class="nav__link link__down"
+                >Salas</a
+              >
+            </li>
             <li><a href="#" class="nav__link link__down">Eventos</a></li>
 
             <li><a href="#" class="nav__link link__down">Restaurantes</a></li>
