Pagina historia empleados integrada

--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -19,7 +19,7 @@
       <nav class="header__nav">
         <ul class="nav__lista">
           <li><a href="../index.html" class="nav__link">Inicio</a></li>
-          <li><a href="#" class="nav__link">Historia</a></li>
+          <li><a href="historias.html" class="nav__link">Empleados</a></li>
           <li>
             <a href="habitaciones.html" class="nav__link">Habitaciones</a>
           </li>
@@ -49,9 +49,13 @@
             <li>
               <a href="../index.html" class="nav__link link__down">Inicio</a>
             </li>
-            <li><a href="#" class="nav__link link__down">Historia</a></li>
             <li>
-              <a href="./pages/habitaciones.html" class="nav__link link__down"
+              <a href="historias.html" class="nav__link link__down"
+                >Empleados</a
+              >
+            </li>
+            <li>
+              <a href="habitaciones.html" class="nav__link link__down"
                 >Habitaciones</a
               >
             </li>
