--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
       <nav class="header__nav">
         <ul class="nav__lista">
           <li><a href="#" class="nav__link">Inicio</a></li>
-          <li><a href="#" class="nav__link">Historia</a></li>
+          <li>
+            <a href="./pages/historias.html" class="nav__link">Empleados</a>
+          </li>
           <li>
             <a href="./pages/habitaciones.html" class="nav__link"
               >Habitaciones</a
@@ -53,7 +55,11 @@
           <ul class="list__down list__down--left display-none">
             <h2 class="list__title">Esenciales</h2>
             <li><a href="#" class="nav__link link__down">Inicio</a></li>
-            <li><a href="#" class="nav__link link__down">Historia</a></li>
+            <li>
+              <a href="./pages/historias.html" class="nav__link link__down"
+                >Empleados</a
+              >
+            </li>
             <li>
               <a href="./pages/habitaciones.html" class="nav__link link__down"
                 >Habitaciones</a
