--- a/pages/salas.html
+++ b/pages/salas.html
@@ -19,7 +19,7 @@
       <nav class="header__nav">
         <ul class="nav__lista">
           <li><a href="../index.html" class="nav__link">Inicio</a></li>
-          <li><a href="#" class="nav__link">Historia</a></li>
+          <li><a href="historias.html" class="nav__link">Empleados</a></li>
           <li>
             <a href="habitaciones.html" class="nav__link">Habitaciones</a>
           </li>
@@ -32,7 +32,7 @@
           <hr />
           <li><a href="#" class="nav__link">Eventos</a></li>
           <hr />
-          <li><a href="#" class="nav__link">Salas</a></li>
+          <li><a href="salas.html" class="nav__link">Salas</a></li>
           <hr />
         </ul>
 
@@ -49,7 +49,11 @@
             <li>
               <a href="../index.html" class="nav__link link__down">Inicio</a>
             </li>
-            <li><a href="#" class="nav__link link__down">Historia</a></li>
+            <li>
+              <a href="historias.html" class="nav__link link__down"
+                >Empleados</a
+              >
+            </li>
             <li>
               <a href="habitaciones.html" class="nav__link link__down"
                 >Habitaciones</a
@@ -59,7 +63,7 @@
 
           <ul class="list__down list__down--right display-none">
             <h2 class="list__title">Lugares</h2>
-            <li><a href="#" class="nav__link link__down">Salas</a></li>
+            <li><a href="salas.html" class="nav__link link__down">Salas</a></li>
             <li><a href="#" class="nav__link link__down">Eventos</a></li>
 
             <li><a href="#" class="nav__link link__down">Restaurantes</a></li>
