Pagina empleados: responsive mejorado

--- a/pages/historias.html
+++ b/pages/historias.html
@@ -76,9 +76,7 @@
       </nav>
     </header>
     <div class="black-curtain" id="menuOverlay"></div>
-    <main>
-      <h1 class="titulo_historias">Nuestro equipo de trabajo</h1>
-
+    <main class="empleados--main">
       <article class="contiene_historias">
         <section class="cuadros_empleados">
           <div class="linea_horizontal"></div>
