--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
       <a href="index.html" class="header__logo-link">
         <img
-          src="../media/imgs/LOGO_HOTEL 4.png"
+          src="./media/imgs/LOGO_HOTEL 4.png"
           class="header__logo"
           alt="Logo del Ensueño Dorado"
         />
