--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
       <nav class="header__nav">
         <ul class="nav__lista">
           <li><a href="#" class="nav__link">Inicio</a></li>
+          <li></li>
+          <li>
+            <a href="./pages/sobre_nosotros.html" class="nav__link"
+              >Sobre Nosotros</a
+            >
+          </li>
           <li>
             <a href="./pages/historias.html" class="nav__link">Empleados</a>
           </li>
@@ -63,6 +69,11 @@
             <li>
               <a href="./pages/habitaciones.html" class="nav__link link__down"
                 >Habitaciones</a
+              >
+            </li>
+            <li>
+              <a href="./pages/sobre_nosotros.html" class="nav__link link__down"
+                >Sobre Nosotros</a
               >
             </li>
           </ul>
