--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -19,6 +19,9 @@
       <nav class="header__nav">
         <ul class="nav__lista">
           <li><a href="../index.html" class="nav__link">Inicio</a></li>
+          <li>
+            <a href="sobre_nosotros.html" class="nav__link">Sobre Nosotros</a>
+          </li>
           <li><a href="historias.html" class="nav__link">Empleados</a></li>
           <li>
             <a href="habitaciones.html" class="nav__link">Habitaciones</a>
@@ -57,6 +60,11 @@
             <li>
               <a href="habitaciones.html" class="nav__link link__down"
                 >Habitaciones</a
+              >
+            </li>
+            <li>
+              <a href="sobre_nosotros.html" class="nav__link link__down"
+                >Sobre Nosotros</a
               >
             </li>
           </ul>
@@ -122,12 +130,12 @@
         <section class="rooms__container">
           <article class="room">
             <img
-              src="../media/rooms/room_test.webp"
+              src="https://images.unsplash.com/photo-…deluxe-room?ixlib=rb‑1.2.1&auto=format&fit=crop&w=800&q=80"
               alt="Imagen de la habitación"
               class="room__img"
             />
             <section class="room__information">
-              <h2 class="room_title">Habitacíon Premium</h2>
+              <h2 class="room_title">Habitación Moderna</h2>
               <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum
                 hic cumque sapiente adipisci nisi autem sunt reprehenderit,
@@ -142,12 +150,12 @@
           </article>
           <article class="room">
             <img
-              src="../media/rooms/room_test.webp"
+              src="https://thumbor.dreamstime.com/…/hotel-deluxe-room.jpg"
               alt="Imagen de la habitación"
               class="room__img"
             />
             <section class="room__information">
-              <h2 class="room_title">Habitacíon Premium</h2>
+              <h2 class="room_title">Habitación Confortable</h2>
               <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum
                 hic cumque sapiente adipisci nisi autem sunt reprehenderit,
@@ -162,12 +170,12 @@
           </article>
           <article class="room">
             <img
-              src="../media/rooms/room_test.webp"
+              src="https://francismarionhotel.com/path/to/king-deluxe.jpg"
               alt="Imagen de la habitación"
               class="room__img"
             />
             <section class="room__information">
-              <h2 class="room_title">Habitacíon Premium</h2>
+              <h2 class="room_title">Habitación Clásica</h2>
               <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum
                 hic cumque sapiente adipisci nisi autem sunt reprehenderit,
