--- a/pages/salas.html
+++ b/pages/salas.html
@@ -19,6 +19,9 @@
       <nav class="header__nav">
         <ul class="nav__lista">
           <li><a href="../index.html" class="nav__link">Inicio</a></li>
+          <li>
+            <a href="sobre_nosotros.html" class="nav__link">Sobre Nosotros</a>
+          </li>
           <li><a href="historias.html" class="nav__link">Empleados</a></li>
           <li>
             <a href="habitaciones.html" class="nav__link">Habitaciones</a>
@@ -57,6 +60,11 @@
             <li>
               <a href="habitaciones.html" class="nav__link link__down"
                 >Habitaciones</a
+              >
+            </li>
+            <li>
+              <a href="sobre_nosotros.html" class="nav__link link__down"
+                >Sobre Nosotros</a
               >
             </li>
           </ul>
