--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -23,9 +23,7 @@
       <nav class="header__nav">
         <ul class="nav__lista">
           <li><a href="../index.html" class="nav__link">Inicio</a></li>
-          <li>
-            <a href="sobre_nosotros.html" class="nav__link">Sobre Nosotros</a>
-          </li>
+          <li><a href="../index.html" class="nav__link">Sobre Nosotros</a></li>
           <li><a href="historias.html" class="nav__link">Empleados</a></li>
           <li>
             <a href="habitaciones.html" class="nav__link">Habitaciones</a>
@@ -66,7 +64,6 @@
                 >Habitaciones</a
               >
             </li>
-            <li>
               <a href="sobre_nosotros.html" class="nav__link link__down"
                 >Sobre Nosotros</a
               >
@@ -84,101 +81,87 @@
       </nav>
     </header>
     <div class="black-curtain" id="menuOverlay"></div>
-    <main class="empleados--main">
-      <article class="contiene_historias">
-        <section class="cuadros_empleados">
-          <div class="linea_horizontal"></div>
-          <div class="foto_empleado">
-            <img src="../media/imgs/Empleados/Juan David.jpeg" alt="" />
-          </div>
-          <div class="historia_empleado">
-            <h4>
-              Juan David López <br />
-              Estudiante de Administración de Empresas
-            </h4>
+    <main class="main_sobre_hotel">
+      <article class="contenedor_total_sb_ht">
+        <section class="caja_sb_ht sombra_sb_ht imagen_centrada">
+          <div class="descripcion_sb_ht">
+            <h1>¿Quiénes somos?</h1>
             <p>
-              "Trabajar en El Ensueño Dorado ha sido una oportunidad para
-              desarrollar mis habilidades de liderazgo y organización. Desde el
-              primer día, he recibido el apoyo de mis compañeros y la confianza
-              de los directivos, lo que me ha permitido crecer y aprender cada
-              día. Recomiendo este hotel a todos los huéspedes que busquen un
-              ambiente cálido y profesional."
+              El Ensueño Dorado, fue fundado por un equipo de ocho soñadores que
+              con mucho empeño sumamos nuestras pasiones y conocimientos para
+              crear un hotel único y acogedor en el centro de Barranquilla. Cada
+              uno de nosotros tiene talentos únicos y complementarios. Gracias a
+              esta diversidad, logramos fusionar creatividad, excelencia y
+              calidez en un solo lugar. Tras seis años de esfuerzo, aprendizaje
+              y compromiso, alcanzamos los objetivos que nos propusimos y nos
+              hemos consolidado como un referente de calidad y hospitalidad en
+              el Atlántico. Hoy, El Ensueño Dorado es sinónimo de experiencias
+              memorables, atención personalizada y un espacio donde cada detalle
+              ha sido pensado para brindarte momentos de descanso y placer.
+              Aquí, nuestros huéspedes no solo encuentran un lugar para
+              quedarse, sino un verdadero hogar lejos de casa.
             </p>
+          </div>
+          <div class="imagen_sb_ht">
+            <img
+              src="../media/imgs/Imagen 1.jpg"
+              alt=""
+              class="imagen_sb_int"
+            />
           </div>
         </section>
-
-        <section class="cuadros_empleados">
-          <div class="linea_horizontal"></div>
-          <div class="foto_empleado">
-            <img src="../media/imgs/Empleados/Laura.jpeg" alt="" />
-          </div>
-          <div class="historia_empleado">
-            <h4>
-              Laura Martínez<br />
-              Aspirante a Maestría en Turismo
-            </h4>
+        <section class="caja_sb_ht sombra_sb_ht imagen_centrada">
+          <div class="descripcion_sb_ht">
+            <h1>Misión</h1>
             <p>
-              "Mi experiencia en El Ensueño Dorado ha sido excepcional. Cada día
-              disfruto del ambiente cordial y el compromiso que todos tenemos
-              para hacer sentir a los huéspedes como en casa. Además, la
-              ubicación privilegiada en el corazón de Barranquilla lo convierte
-              en el sitio ideal para explorar la ciudad con estilo y comodidad."
+              En El Ensueño Dorado, nuestra misión es brindar a nuestros
+              huéspedes un espacio donde puedan sentirse tan acogidos y cómodos
+              como en la casa de sus amigos, combinando la calidez y
+              familiaridad con la elegancia y sofisticación de un palacio de
+              realeza. Nos esforzamos por crear un entorno en el que la
+              modernidad y el diseño impactante se integren armoniosamente con
+              espacios funcionales y cómodos, pensados para satisfacer tanto las
+              necesidades laborales como los momentos de descanso y
+              esparcimiento. Nos comprometemos a ofrecer un servicio
+              excepcional, garantizando a cada visitante una experiencia única,
+              memorable y profundamente gratificante.
             </p>
+          </div>
+          <div class="imagen_sb_ht">
+            <img
+              src="../media/imgs/Imagen 2.jpg"
+              alt=""
+              class="imagen_sb_int"
+            />
           </div>
         </section>
-
-        <section class="cuadros_empleados">
-          <div class="linea_horizontal"></div>
-          <div class="foto_empleado">
-            <img src="../media/imgs/Empleados/Alejandro.jpeg" alt="" />
-          </div>
-          <div class="historia_empleado">
-            <h4>
-              Alejandro Gutiérrez<br />
-              Estudiante de Gastronomía
-            </h4>
+        <section class="caja_sb_ht sombra_sb_ht imagen_centrada">
+          <div class="descripcion_sb_ht">
+            <h1>Visión</h1>
             <p>
-              "Como parte del equipo culinario he podido experimentar la
-              verdadera pasión por la hospitalidad. Mis compañeros y los
-              directivos siempre han estado dispuestos a compartir sus
-              conocimientos y ayudarme a perfeccionar mis habilidades en la
-              cocina. Estoy seguro de que los huéspedes podrán saborear la
-              dedicación y el amor que ponemos en cada plato."
+              En El Ensueño Dorado, soñamos con que para el año 2027 seamos un
+              hotel de referencia en toda la costa Caribe colombiana,
+              reconocidos por nuestra hospitalidad, nuestra excelencia
+              arquitectónica y por el ambiente acogedor que nos distingue.
+              Queremos expandir nuestras instalaciones y abrir nuevas sedes,
+              manteniendo viva la esencia de nuestra marca: un espacio donde el
+              confort y la belleza se combinan para crear experiencias únicas y
+              memorables. Pero no queremos que este sueño sea solo nuestro.
+              Invitamos a nuestros huéspedes a ser parte de este viaje,
+              sumándose a una cultura de conciencia ambiental y cuidado
+              responsable de los recursos. Juntos podemos construir un verdadero
+              hogar en armonía con la naturaleza y con la comunidad que nos
+              rodea.
             </p>
+          </div>
+          <div class="imagen_sb_ht">
+            <img
+              src="../media/imgs/Imagen 3.jpeg"
+              alt=""
+              class="imagen_sb_int"
+            />
           </div>
         </section>
-
-        <section class="cuadros_empleados">
-          <div class="linea_horizontal"></div>
-          <div class="foto_empleado">
-            <img src="../media/imgs/Empleados/Andrés.jpeg" alt="" />
-          </div>
-          <div class="historia_empleado">
-            <h4>
-              Andrés Ramírez<br />
-              Aspirante a Doctorado en Ingeniería Ambiental
-            </h4>
-            <p>
-              "Trabajar en este hotel me ha permitido aprender sobre
-              sostenibilidad y prácticas responsables en la industria hotelera.
-              Los directivos siempre están abiertos a ideas nuevas y a la
-              innovación, esto me motiva a aportar soluciones que beneficien
-              tanto a los huéspedes como al medio ambiente.
-            </p>
-          </div>
-        </section>
-      </article>
-      <article>
-        <div class="descripcion_historias">
-          <div class="contiene_descripcion_h">
-            <p>
-              ¿Quieres comprobar que sus historias son reales? ¿¡Qué esperas!?
-              <br />
-              Obtén tu reservación y disfruta del mejor equipo hotelero del
-              atlántico a tu servicio
-            </p>
-          </div>
-        </div>
       </article>
     </main>
     <footer>
